@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.233 2008/04/10 18:09:02 sfeam Exp $
+dnl $Id: configure.in,v 1.234 2008/09/09 18:25:30 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -138,6 +138,24 @@ AC_EGREP_HEADER(time_t,time.h,
              [ Define if time_t is declared in time.h. ])])
 AC_TYPE_SIGNAL
  
+dnl Try to find a 32bit integer type
+AC_CHECK_SIZEOF(u_int32_t, 4)
+AC_CHECK_SIZEOF(int, 4)
+AC_CHECK_SIZEOF(short, 4)
+
+# Now we need to find what gp_uint32_t (sizeof == 4) will be.
+if test "$ac_cv_sizeof_u_int32_t" = "4"; then
+    uint32_t_def='#define GP_UINT32_T uint32_t'
+    AC_DEFINE(GP_UINT32_T, u_int32_t, [ some 32-bit type ])
+elif test "$ac_cv_sizeof_int" = "4"; then
+    uint32_t_def='#define GP_UINT32_T unsigned int'
+    AC_DEFINE(GP_UINT32_T, unsigned int, [ some 32-bit type ])
+elif test "$ac_cv_sizeof_short" = "4"; then
+    uint32_t_def='#define GP_UINT32_T unsigned short'
+    AC_DEFINE(GP_UINT32_T, "unsigned short", [ some 32-bit type ])
+else
+    AC_ERROR([could not find a 32-bit integer type])
+fi
 
 dnl Functions. Standard first, then others
 
