@@ -1,3 +1,14 @@
+2008-09-09  Ethan Merritt  <merritt@u.washington.edu>
+
+	* configure.in src/syscfg.h:  Try to discover and define a safe 32-bit
+	data type GP_UINT32_T.
+
+	* term/cairo.trm:
+	Fix cairopng_do_crop to use GP_UINT32_T, and bail out cleanly if it was
+	not defined correctly.
+	Terminal options were overwriting each other in the options string.
+	Handle cropping of images with transparent background.
+
 2008-09-08  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/graph3d.c (do_3dplot): Fixed MIN => GPMIN.
